[package]
name = "subthereum-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
ethbloom = { version = "0.8.1", default-features = false }
sp-primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false }

[features]
default = ["std"]
std = [
    "ethbloom/std",
    "sp-primitives/std",
    "sp-std/std"
]
