[package]
name = "subthereum-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
ethbloom = { version = "0.8.1", default-features = false }
parity-scale-codec = { version = "1.1", default-features = false, feature = ["derive"] }
serde = { version = "1.0", default-features = false }

sp-core = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }

[dev-dependencies]
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
    "ethbloom/serialize",
    "parity-scale-codec/std",
    "serde/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
]
