[package]
name = "subthereum-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
primitives = { package = "subthereum-primitives", path = "../primitives", default-features = false }
aura = { package = "pallet-aura", git = "https://github.com/paritytech/substrate", default-features = false }
aura-primitives = { package = "sp-consensus-aura", git = "https://github.com/paritytech/substrate", default-features = false }
balances = { package = "pallet-balances", git = "https://github.com/paritytech/substrate", default-features = false }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/paritytech/substrate", default-features = false}
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
executive = { package = "frame-executive", git = "https://github.com/paritytech/substrate", default-features = false }
grandpa = { package = "pallet-grandpa", git = "https://github.com/paritytech/substrate", default-features = false }
indices = { package = "pallet-indices", git = "https://github.com/paritytech/substrate", default-features = false }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", default-features = false}
offchain-primitives = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", default-features = false }
sp-primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate", default-features = false }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false }
safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false }
sudo = { package = "pallet-sudo", git = "https://github.com/paritytech/substrate", default-features = false }
support = { package = "frame-support", git = "https://github.com/paritytech/substrate", default-features = false }
system = { package = "frame-system", git = "https://github.com/paritytech/substrate", default-features = false }
timestamp = { package = "pallet-timestamp", git = "https://github.com/paritytech/substrate", default-features = false }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate", default-features = false }
sp-transaction-pool = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", default-features = false }
version = { package = "sp-version", git = "https://github.com/paritytech/substrate", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
std = [
    "primitives/std",
	"aura-primitives/std",
	"aura/std",
	"balances/std",
	"block-builder-api/std",
	"codec/std",
	"executive/std",
	"grandpa/std",
	"indices/std",
	"inherents/std",
	"offchain-primitives/std",
	"sp-primitives/std",
	"randomness-collective-flip/std",
	"sp-std/std",
	"sp-io/std",
	"safe-mix/std",
	"serde",
	"sp-api/std",
	"sp-runtime/std",
	"sp-session/std",
	"sudo/std",
	"support/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
	"sp-transaction-pool/std",
	"version/std",
]
