[package]
name = "subthereum-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
primitives = { package = "subthereum-primitives", path = "../primitives", default-features = false }

codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

aura = { version = "2.0.0", default-features = false, package = "pallet-aura", git = "https://github.com/paritytech/substrate" }
balances = { version = "2.0.0", default-features = false, package = "pallet-balances", git = "https://github.com/paritytech/substrate" }
frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
grandpa = { version = "2.0.0", default-features = false, package = "pallet-grandpa", git = "https://github.com/paritytech/substrate" }
indices = { version = "2.0.0", default-features = false, package = "pallet-indices", git = "https://github.com/paritytech/substrate" }
randomness-collective-flip = { version = "2.0.0", default-features = false, package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate" }
sudo = { version = "2.0.0", default-features = false, package = "pallet-sudo", git = "https://github.com/paritytech/substrate" }
system = { version = "2.0.0", default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate" }
timestamp = { version = "2.0.0", default-features = false, package = "pallet-timestamp", git = "https://github.com/paritytech/substrate" }
transaction-payment = { version = "2.0.0", default-features = false, package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate" }
frame-executive = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-api = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { version = "0.8", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-offchain = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-session = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-version = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }

[build-dependencies]
wasm-builder-runner = { version = "1.0.4", package = "substrate-wasm-builder-runner", git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
std = [
    "primitives/std",
    "codec/std",
    "safe-mix/std",
    "serde",
	"aura/std",
	"balances/std",
	"frame-executive/std",
	"frame-support/std",
	"grandpa/std",
	"indices/std",
	"randomness-collective-flip/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sudo/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
]
